--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "symfony/config":"2.2.*",
         "symfony/browser-kit":"2.2.*",
         "symfony/translation":"2.2.*",
-        "guzzle/guzzle":"*"
+        "guzzle/guzzle":"3.*"
     },
     "autoload":{
         "psr-0":{
