--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "symfony/yaml":"2.2.*",
         "symfony/config":"2.2.*",
         "symfony/browser-kit":"2.2.*",
-        "symfony/translation":"2.2.*",
+        "symfony/translation":"2.2.*"
     },
     "autoload":{
         "psr-0":{
